--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,8 +1,5 @@
 /* body */
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
-
-/*非表示*/
-.sp-br{display:none;}
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Zen+Kaku+Gothic+New:wght@500;900&display=swap');.sp-br{display:none;}
 .sp_link{display: none;}
 .sActual_img_sp{display: none;}
 .pSkilbox_sp{display: none;}
@@ -51,7 +48,7 @@
     }
 }
 
-/*背景星下部*/
+/*背景星縦スクロール*/
 .hosi0a{
     position: fixed;
     top: 0;
@@ -101,12 +98,13 @@ body{
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-   /*フォント*/
-   font-family: 'DotGothic16', sans-serif;
-   letter-spacing: 0.2em;
-   font-weight: 900;
+    letter-spacing: 0.1em;
+    line-height: 2.1em;
+    /*font-weight: 900;*/
    /* 背景色初期値*/
       background-color: #0d1117;
+      font-family: 'Zen Kaku Gothic New', sans-serif;
+
   }
 
 *{
@@ -120,7 +118,9 @@ body{
 }
 
 h1{
+    font-family: 'DotGothic16', sans-serif;
     font-size: 50px;
+    color: #151f33;
 	text-align:center;
 	line-height:0.95em;
 	text-shadow: 0 0 0.2em #d2e8ff;
@@ -136,7 +136,7 @@ a{
     text-shadow: 0 0 0 #000;
 }
 
-/* フォント白 */
+/* フォント紫 */
 .wfont{
     color:#cd69ff;
     text-shadow: 0 0 0 #000;
@@ -169,6 +169,7 @@ a{
 
 /*タイトル背景*/
 .video_title{
+    z-index: 500;
     width: 1920px;
     height: 1000px;
     position: relative;
@@ -182,8 +183,16 @@ a{
     bottom: -30px;
  }
 
+ .nami2{
+    position: absolute;
+    z-index: 500;
+    width: 100%;
+    bottom: -30px;
+ }
+
 /*タイトルロゴ*/
 .img_title{
+    z-index: 500;
     left: 38%;
     height: 50%;
     width: 50%;
@@ -258,14 +267,15 @@ a{
     display: flex;
     z-index: 10000;
     position: fixed;
-    background-color: #9db322;
+    background-color: #b3cc27;
   }
 
   .item_linka a{
-    color: #d2e8ff;   
+    color: #23A2B2;  
   }
 
 .li_link{
+    font-family: 'DotGothic16', sans-serif;
     margin-top: -20px;
     margin-right: 50px;
     padding-left: 15px;
@@ -291,6 +301,7 @@ a{
 
 /*プロフィールスタイル-------------------------*/
 .cHoby{
+    font-family: 'DotGothic16', sans-serif;
     z-index: 500;
 }
 
@@ -443,6 +454,7 @@ a{
 }
 
 .sSkil0CatB h3{
+    font-family: 'DotGothic16', sans-serif;
     position: relative;
     margin-top: -185px;
     font-size: 25px;
@@ -688,7 +700,7 @@ a{
     width: 500px;
     margin: 40px;
     padding: 20px;
-    background-color: rgb(35, 162, 178);
+    background-color: #23A2B2;
     border-radius: 15px;
 }
 
@@ -708,64 +720,81 @@ a{
     width: 500px;
     height: 260px;
     object-fit: cover;
-    box-shadow:  5px 5px 3px #183c7f;
+    box-shadow:  5px 5px 3px #145c66;
 }    
 
 /*最後にスタイル-------------------------*/
 .slast{
-    display: none;
-    top: 5500px;
+    /*display: none;*/
+    top: 6400px;
     height: 600px;
     width: 100%;
     padding-bottom: 300px;
     position: absolute;
     z-index: 500;
-}   
+}
+.slast h1{
+    font-family: 'DotGothic16', sans-serif;
+    font-size: 50px;
+    color: #151f33;
+	text-align:center;
+	line-height:0.95em;
+	text-shadow: 0 0 0.2em #d2e8ff;
+}
+
+.slast h1:before {
+    position: absolute;
+    content: '';
+    height: 50px;
+    width: 50px;
+    display: block;
+    background: #d2e8ff;
+    transform: rotate(45deg);
+    z-index: -10;
+    left: 0;
+    right: 0;
+    top: -3px;
+    margin: auto;
+    animation: rotate-anime 20s linear infinite;
+}
+
+/*.slastCat{
+    margin-top: 40px;
+    padding-top: 155px;
+    width: 100%;
+    display:flex;
+    justify-content: space-between;
+}*/
 
 /*最後に画像  */
 .catmaru_img{
     position: relative;
     width: 600px;
     height: 600px;
-    left: 1080px;
+    left: 60vw;
     margin-top: -125px;
 }
 
 /*最後に文字  */
 .slast0{
-    width: 1920px;
-    height: auto;
-    line-height: 3.5em;
-}
-
-.slast0 p{
-    width: 1000px;
-    right: 470px;
-    font-size: 35px;
-    position: relative;
+    background-image: url(../img/catmaru.PNG);
+    background-repeat: no-repeat;
+    background-position: 65% 0;
+    background-size: 500px;
+    margin-top: 150px;
+    width: 100%;
+    height: 550px;
+    line-height: 1.5em;
+    padding-left: 15%;
+    color: #151f33;
 }
 
 .slast1{
-    width: 1920px;
+    width: 100%;
     height: auto;
-    font-size: 35px;
     line-height: 1.5em;
+    padding-left: 20%;
 }
-
-.slast1 p{
-    top: 450px;
-    right: 115px;
-    font-size: 35px;
-    position: relative;
-}
-
-.slastCat{
-    display: flex;
-    margin-top: 40px;
-    float:left;
-    width: 0;
-}
-
 /*星*/
 
 
@@ -777,6 +806,15 @@ a{
 
 
 /* メディアごとのcss    -----------------------------------------------------------------*/
+/*タブレット*/
+@media screen and (max-width:1024px) {
+    .item_link,.item_linka,.nav_content,.cTitle,.cHoby,.sSkil,.sActual,.slast{
+        width: 1024px;
+        height: auto;
+    }
+    
+}
+
 /*スマートフォン用*/
 @media screen and (max-width:546px) {
  /*改行*/
